tests/health/tests__lsp__with__space__foo.toit.gold
tests/lsp/with space/foo.toit:6:3: error: Argument mismatch for 'bar'
Too few arguments provided
  bar
  ^~~
